# igloooo

./: .gitignore  .vimrc  Cargo.toml  data.json  data1.json  example.txt  file.txt  iglooo_22
grope/: Cargo.toml
grope/src/: cli.rs  main.rs  search.rs  walker.rs
src/: .main.rs.swp  iglooo_1.rs  iglooo_11.rs  iglooo_14.rs  iglooo_15.rs  iglooo_18.rs  iglooo_2.rs  iglooo_22.rs  iglooo_24.rs  iglooo_26.rs  iglooo_29.rs  iglooo_3.rs  iglooo_30.rs  iglooo_31.rs  iglooo_32.rs  iglooo_37.rs  iglooo_39.rs  iglooo_40.rs  iglooo_41.rs  iglooo_42.rs  iglooo_43.rs  iglooo_44.rs  iglooo_5.rs  iglooo_7.rs
