[package]
name = "iglooo"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
trpl = "0.3.0"
anyhow = "1.0.102"
rayon = "1.12.0"
sha2 = "0.10"                                                                                                          
num_cpus = "1.16"
